Wed Nov 20 18:04:00 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Muxing/run_test.pl: Checked in a version of the script
	  that I use locally by mistake. Reverted the change to the
	  original form.

Wed Nov 20 18:01:38 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Connection_Handler.cpp (close_connection_eh): Did cosmetic
	  changes to the assertive checks.

Wed Nov 20 15:23:40 2002  Ossama Othman  <ossama@uci.edu>

	* TAO_IDL/be/be_visitor_operation/ami_cs.cpp
	  (gen_marshal_and_invoke):

	  Initialize the invocation status variable in the generated stub
	  code.  Previously, that variable was uninitialized, which caused
	  some invalid code execution paths to occur.  Fixes some problems
	  exhibited by TAO's basic AMI regression test.

Wed Nov 20 15:15:02 2002  Ossama Othman  <ossama@uci.edu>

	* tao/ClientRequestInfo_i.h (setup_picurrent):

	  New method that sets up the thread scope and request scope
	  PICurrent objects on the client side.

	* tao/ClientRequestInfo_i.cpp (TAO_ClientRequestInfo_i):
	  (setup_current):

	  Refactored duplicate code in both TAO_ClientRequestInfo_i
	  constructors to the new setup_picurrent() method.

	  Only set the TSC's peer if a copy was actually performed.  Fixes
	  a seg fault after calling
	  PortableInterceptor::Current::set_slot() after a client
	  invocation was performed.  Thanks to Philipp Leibfried
	  <pleibfried@speech-design.de> for providing a test case that
	  reproduced this problem.

Wed Nov 20 15:54:10 2002  Jeff Parsons <parsons@isis-server.isis.vanderbilt.edu>

        * TAO_IDL/be/be_visitor_exception/exception_cs.cpp:

          Changed an internal variable name in generated code for the
          _downcast() method that was short and ran a high risk of name
          clash with the exception typename.

Wed Nov 20 15:23:13 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
