@@ -1,3 +1,12 @@
+Thu Nov 21 13:26:27 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
+
+	* tao/Connection_Handler.cpp: Avoid checks for reactor consistency
+	  if the handler is not registered with the reactor. This shuld
+	  fix most of the runtime problems that we are seeing. This place
+	  needs to be reexamined after the beta. The interscetion of
+	  RTCORBA and nonRT cases simplyy makes this place too
+	  complicated. 
+
 Wed Nov 20 18:04:00 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* tests/Muxing/run_test.pl: Checked in a version of the script
